<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/store_orders"
            android:layout_width="200dp"
            android:layout_height="50dp" android:id="@+id/StoreOrdersText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.023"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="50dp" android:id="@+id/phoneNumText"
            app:layout_constraintTop_toBottomOf="@+id/StoreOrdersText"
            app:layout_constraintBottom_toTopOf="@id/orderListView" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.119" android:layout_marginTop="36dp"/>
    <Spinner
            android:layout_width="220dp"
            android:layout_height="50dp" android:id="@+id/phoneNumSpinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/phoneNumText" app:layout_constraintHorizontal_bias="0.804"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/StoreOrdersText"
            android:layout_marginBottom="13dp" app:layout_constraintBottom_toTopOf="@id/orderListView"/>
    <ListView
            android:layout_width="375dp"
            android:layout_height="400dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/orderListView"/>
    <Button
            android:text="@string/cancel_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/cancelOrderButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orderListView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>